docs and cleaner examples